@@ -1,251 +1,141 @@
 package com.example.temperature.exception;
 
-import com.example.temperature.dto.error.ErrorBody;
-import com.example.temperature.dto.error.ErrorDetail;
-import com.example.temperature.dto.error.ErrorEnvelope;
-import jakarta.validation.ConstraintViolation;
+import com.example.temperature.api.error.ErrorBody;
+import com.example.temperature.api.error.ErrorDetailResponse;
+import com.example.temperature.api.error.ErrorResponse;
 import jakarta.validation.ConstraintViolationException;
+import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
-import org.springframework.dao.DataAccessException;
-import org.springframework.http.HttpHeaders;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
+import org.springframework.dao.DataAccessResourceFailureException;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.validation.FieldError;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
-import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.MissingServletRequestParameterException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
-import org.springframework.web.multipart.MaxUploadSizeExceededException;
 import org.springframework.web.servlet.NoHandlerFoundException;
 import org.springframework.web.servlet.resource.NoResourceFoundException;
-import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
-
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
-public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
+@Order(Ordered.HIGHEST_PRECEDENCE)
+public class GlobalExceptionHandler {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
-    @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(
-            MethodArgumentNotValidException ex,
-            HttpHeaders headers,
-            HttpStatusCode status,
-            WebRequest request
-    ) {
-        List<ErrorDetail> details = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .sorted(Comparator.comparing(FieldError::getField))
-                .map(error -> new ErrorDetail(error.getField(), resolveMessage(error)))
-                .collect(Collectors.toList());
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ErrorResponse> handleMethodArgumentNotValid(MethodArgumentNotValidException ex) {
+        List<ErrorDetailResponse> details = ex.getBindingResult().getFieldErrors().stream()
+                .map(this::toFieldErrorDetail)
+                .toList();
 
-        ex.getBindingResult()
-                .getGlobalErrors()
-                .stream()
-                .map(error -> new ErrorDetail(error.getObjectName(), resolveMessage(error)))
-                .forEach(details::add);
+        List<ErrorDetailResponse> globalDetails = ex.getBindingResult().getGlobalErrors().stream()
+                .map(error -> new ErrorDetailResponse(error.getObjectName(), resolveMessage(error)))
+                .toList();
 
-        return buildResponse(
-                HttpStatus.BAD_REQUEST,
-                "VALIDATION_ERROR",
-                "Request validation failed",
-                details
-        );
-    }
-
-    @Override
-    protected ResponseEntity<Object> handleHttpMessageNotReadable(
-            HttpMessageNotReadableException ex,
-            HttpHeaders headers,
-            HttpStatusCode status,
-            WebRequest request
-    ) {
-        return buildResponse(
-                HttpStatus.BAD_REQUEST,
-                "MALFORMED_JSON",
-                "Request body is malformed or contains invalid field values",
-                List.of(new ErrorDetail(null, "Request body must be valid JSON matching the API contract"))
-        );
-    }
-
-    @Override
-    protected ResponseEntity<Object> handleMissingServletRequestParameter(
-            MissingServletRequestParameterException ex,
-            HttpHeaders headers,
-            HttpStatusCode status,
-            WebRequest request
-    ) {
-        return buildResponse(
-                HttpStatus.BAD_REQUEST,
-                "VALIDATION_ERROR",
-                "Request validation failed",
-                List.of(new ErrorDetail(ex.getParameterName(), "Required query parameter is missing"))
-        );
-    }
-
-    @Override
-    protected ResponseEntity<Object> handleHttpMediaTypeNotSupported(
-            HttpMediaTypeNotSupportedException ex,
-            HttpHeaders headers,
-            HttpStatusCode status,
-            WebRequest request
-    ) {
-        return buildResponse(
-                HttpStatus.UNSUPPORTED_MEDIA_TYPE,
-                "UNSUPPORTED_MEDIA_TYPE",
-                "Unsupported media type",
-                List.of(new ErrorDetail("Content-Type", "Content-Type must be application/json"))
-        );
-    }
-
-    @Override
-    protected ResponseEntity<Object> handleNoHandlerFoundException(
-            NoHandlerFoundException ex,
-            HttpHeaders headers,
-            HttpStatusCode status,
-            WebRequest request
-    ) {
-        return buildResponse(
-                HttpStatus.NOT_FOUND,
-                "NOT_FOUND",
-                "The requested path does not exist",
-                List.of(new ErrorDetail(null, ex.getRequestURL()))
-        );
-    }
-
-    @Override
-    protected ResponseEntity<Object> handleHttpRequestMethodNotSupported(
-            HttpRequestMethodNotSupportedException ex,
-            HttpHeaders headers,
-            HttpStatusCode status,
-            WebRequest request
-    ) {
-        return buildResponse(
-                HttpStatus.NOT_FOUND,
-                "NOT_FOUND",
-                "The requested path does not exist",
-                List.of(new ErrorDetail(null, "HTTP method is not supported for this path"))
-        );
-    }
-
-    @ExceptionHandler(NoResourceFoundException.class)
-    public ResponseEntity<Object> handleNoResourceFound(NoResourceFoundException ex) {
-        return buildResponse(
-                HttpStatus.NOT_FOUND,
-                "NOT_FOUND",
-                "The requested path does not exist",
-                List.of(new ErrorDetail(null, ex.getResourcePath()))
-        );
-    }
-
-    @ExceptionHandler(InvalidQueryParameterException.class)
-    public ResponseEntity<Object> handleInvalidQueryParameter(InvalidQueryParameterException ex) {
-        return buildResponse(
-                HttpStatus.BAD_REQUEST,
-                "INVALID_QUERY_PARAMETER",
-                "Query parameter validation failed",
-                ex.getDetails()
-        );
-    }
-
-    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    public ResponseEntity<Object> handleMethodArgumentTypeMismatch(MethodArgumentTypeMismatchException ex) {
-        String field = ex.getName();
-        String message = "Query parameter has an invalid format";
-        Class<?> requiredType = ex.getRequiredType();
-
-        if (requiredType != null && requiredType.getSimpleName().equals("OffsetDateTime")) {
-            message = "Query parameter must be a valid ISO 8601 date-time with timezone";
-        } else if (requiredType != null && requiredType.getSimpleName().equals("Integer")) {
-            message = "Query parameter must be a valid integer";
+        if (!globalDetails.isEmpty()) {
+            details = new java.util.ArrayList<>(details);
+            details.addAll(globalDetails);
         }
 
-        return buildResponse(
-                HttpStatus.BAD_REQUEST,
-                "INVALID_QUERY_PARAMETER",
-                "Query parameter validation failed",
-                List.of(new ErrorDetail(field, message))
-        );
+        return build(HttpStatus.BAD_REQUEST, "VALIDATION_ERROR", "Request validation failed", details);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<Object> handleConstraintViolation(ConstraintViolationException ex) {
-        List<ErrorDetail> details = ex.getConstraintViolations()
-                .stream()
-                .map(this::toErrorDetail)
+    public ResponseEntity<ErrorResponse> handleConstraintViolation(ConstraintViolationException ex) {
+        List<ErrorDetailResponse> details = ex.getConstraintViolations().stream()
+                .map(violation -> new ErrorDetailResponse(violation.getPropertyPath().toString(), violation.getMessage()))
                 .toList();
+        return build(HttpStatus.BAD_REQUEST, "VALIDATION_ERROR", "Request validation failed", details);
+    }
 
-        return buildResponse(
+    @ExceptionHandler(InvalidRequestException.class)
+    public ResponseEntity<ErrorResponse> handleInvalidRequest(InvalidRequestException ex) {
+        return build(
                 HttpStatus.BAD_REQUEST,
-                "VALIDATION_ERROR",
-                "Request validation failed",
-                details
+                ex.getCode(),
+                ex.getMessage(),
+                List.of(new ErrorDetailResponse(ex.getField(), ex.getDetailMessage()))
         );
     }
 
-    @ExceptionHandler(MaxUploadSizeExceededException.class)
-    public ResponseEntity<Object> handleMaxUploadSizeExceeded(MaxUploadSizeExceededException ex) {
-        return buildResponse(
-                HttpStatus.PAYLOAD_TOO_LARGE,
-                "PAYLOAD_TOO_LARGE",
-                "Request payload is too large",
-                List.of(new ErrorDetail(null, "Request payload exceeds the configured maximum size"))
+    @ExceptionHandler({
+            HttpMessageNotReadableException.class,
+            MethodArgumentTypeMismatchException.class,
+            MissingServletRequestParameterException.class
+    })
+    public ResponseEntity<ErrorResponse> handleBadRequest(Exception ex) {
+        return build(
+                HttpStatus.BAD_REQUEST,
+                "BAD_REQUEST",
+                "The request is malformed or contains invalid parameter values",
+                List.of(new ErrorDetailResponse(null, ex.getMessage()))
         );
     }
 
-    @ExceptionHandler(DataAccessException.class)
-    public ResponseEntity<Object> handleDataAccess(DataAccessException ex) {
-        LOGGER.error("Database access failure", ex);
-        return buildResponse(
+    @ExceptionHandler(HttpMediaTypeNotSupportedException.class)
+    public ResponseEntity<ErrorResponse> handleUnsupportedMediaType(HttpMediaTypeNotSupportedException ex) {
+        return build(
+                HttpStatus.UNSUPPORTED_MEDIA_TYPE,
+                "UNSUPPORTED_MEDIA_TYPE",
+                "Unsupported media type",
+                List.of(new ErrorDetailResponse("Content-Type", ex.getMessage()))
+        );
+    }
+
+    @ExceptionHandler({NoHandlerFoundException.class, NoResourceFoundException.class})
+    public ResponseEntity<ErrorResponse> handleNotFound(Exception ex) {
+        return build(
+                HttpStatus.NOT_FOUND,
+                "NOT_FOUND",
+                "The requested path does not match a defined endpoint",
+                List.of(new ErrorDetailResponse(null, ex.getMessage()))
+        );
+    }
+
+    @ExceptionHandler({DataAccessUnavailableException.class, DataAccessResourceFailureException.class})
+    public ResponseEntity<ErrorResponse> handleDataAccessUnavailable(Exception ex) {
+        return build(
                 HttpStatus.SERVICE_UNAVAILABLE,
                 "SERVICE_UNAVAILABLE",
-                "The service is temporarily unable to store or retrieve temperature data",
-                List.of()
+                "The service is temporarily unable to access temperature data",
+                List.of(new ErrorDetailResponse(null, ex.getMessage()))
         );
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<Object> handleUnexpected(Exception ex) {
-        LOGGER.error("Unexpected application error", ex);
-        return buildResponse(
+    public ResponseEntity<ErrorResponse> handleUnexpected(Exception ex) {
+        LOGGER.error("Unexpected server error", ex);
+        return build(
                 HttpStatus.INTERNAL_SERVER_ERROR,
                 "INTERNAL_SERVER_ERROR",
-                "An unexpected server error occurred",
+                "An unexpected server-side failure occurred",
                 List.of()
         );
     }
 
-    private ErrorDetail toErrorDetail(ConstraintViolation<?> violation) {
-        return new ErrorDetail(violation.getPropertyPath().toString(), violation.getMessage());
+    private ErrorDetailResponse toFieldErrorDetail(FieldError fieldError) {
+        return new ErrorDetailResponse(fieldError.getField(), resolveMessage(fieldError));
     }
 
-    private String resolveMessage(DefaultMessageSourceResolvable error) {
-        return error.getDefaultMessage() == null ? "Invalid value" : error.getDefaultMessage();
+    private String resolveMessage(DefaultMessageSourceResolvable resolvable) {
+        return resolvable.getDefaultMessage() == null ? "Invalid value" : resolvable.getDefaultMessage();
     }
 
-    private ResponseEntity<Object> buildResponse(
+    private ResponseEntity<ErrorResponse> build(
             HttpStatus status,
             String code,
             String message,
-            List<ErrorDetail> details
+            List<ErrorDetailResponse> details
     ) {
-        ErrorEnvelope envelope = new ErrorEnvelope(new ErrorBody(code, message, details));
-        return ResponseEntity
-                .status(status)
-                .contentType(MediaType.APPLICATION_JSON)
-                .body(envelope);
+        return ResponseEntity.status(status)
+                .body(new ErrorResponse(new ErrorBody(code, message, details)));
     }
 }
